--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -1,5 +1,10 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
+# ignore node modules
+../node_modules
+../api/node_modules
+./node_modules
+
 # Compiled output
 /dist
 /tmp
